re-add plex to kustomization

--- a/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
+++ b/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
@@ -4,48 +4,48 @@ metadata:
     name: cluster-config
     namespace: flux-system
 data:
-    #ENC[AES256_GCM,data:0OdEoNOubxr3X0/5VQZ+9qq6DWC9coMmt5f4zLFamBcCBJjSU+YlsRhcMzqKwJ1lEGqQkjrRcQGLlmXPJeJ85x8=,iv:7HA+PK7sTP+DeBVTyys5kzeObD1Ir6DX71TwxZXv2rc=,tag:WLMWU1BrYTXapuCV7LuLTg==,type:comment]
-    #ENC[AES256_GCM,data:zE8VaN/vSclxvG1b4cY6SkQ3/Pc+vovdFQqEAdk1d2uGL24ec2HP2glwFk4=,iv:qo8aPbAG5hea5tWKbl8cmtdie0SdoloWH/KfWPMF8jI=,tag:DDZfnG1hYQD9hUEhQ/3YgA==,type:comment]
-    VIP: ENC[AES256_GCM,data:aq0JWbx+/r6FVRLJtA==,iv:20YdJfnS3XLsNmYTCDEvsxBvRijuJ64zaJq5m1T1MKk=,tag:qNxWaNn2s71KTxHV5Y/qPA==,type:str]
-    #ENC[AES256_GCM,data:ve82dOaG8E7JUAQV18BTyTp26DfdB4/rm1XV,iv:rAZ2NVKyZmkOYWVrgXa27Wr70YiB4M01WjwyVPI03Vc=,tag:gMU/2+kiFu5GTxKQnoj9cQ==,type:comment]
-    #ENC[AES256_GCM,data:8I1K8BcT05yZpl9l/c4PFnSHR1o3+2BPHHXPSKl/Vw8MJejxV0hnp1xGQ/HImOZLLwgbaE6J1ID3VO0xrPpkBfMGvDCBRifsXe4uq6I5fMtFstoOe29JamM=,iv:JbEi6PTCJ+t0RpZ0GhoNheK9qTlONp6dEkjyR5AwWLQ=,tag:rplDvh128MOZLXLkZAi3qw==,type:comment]
-    MASTER1IP: ENC[AES256_GCM,data:HBZexfeGBsE9l3eEsfY=,iv:QR9I8b7xpKQEp5KYgKb3h/vx8Tp2+aAw+kHwK6CBzaU=,tag:N93diU713Uv9dOz8qzqz/Q==,type:str]
-    #ENC[AES256_GCM,data:6bP7vgI8wrGRzkiD1jDnFJf7DNkztyGsZ65iaEDlUoZ9Rg==,iv:gcT/JEdqXgG4lfod2R9L8ZmKEjkpw6t1ypPW668tyh0=,tag:dAmRsabBDyRrJHR8bnRrpQ==,type:comment]
-    GATEWAY: ENC[AES256_GCM,data:qglmFPDty2rwDblMQQ==,iv:TotFgAqy8KASID4aG5Ga29cMOX9U9/u+XtoNLeE53b4=,tag:Fe/cpCqcVvZfsRbZEFCkCw==,type:str]
-    #ENC[AES256_GCM,data:1qvQzxUeTzny+91Q2Xl/3TfghLYutbSWaMVxyv6CC/VDruBv/rrvLdhNX0pCH7o=,iv:NBArnHMMqTAfYz0UdaGsxaS9UiSDUNAioUucXNMCKQw=,tag:SoFhRPNIAOCu6FoCJ4Tp9g==,type:comment]
-    METALLB_RANGE: ENC[AES256_GCM,data:eSJFhKwy3xNhFQFVe/6F66YXxdMA17ZEMykcOTB0GA==,iv:cC+OoGeczQSBsBMD43SH7d0ErfRnrh5dLMzY5dC6Rjo=,tag:ea6Z9xRV9jojTtsLUOelyA==,type:str]
-    #ENC[AES256_GCM,data:14gSR/2Yd9UzWKA3TaMAfrXabHaheN0MGrtOUvNmQ2H+2mLvy/2HSe/TqWrTo/NOkhQJA9NSQOgRVEO6RYU0ib1ugkmdljiMM/CeMMXETKGP+Q==,iv:/co8Om69wGr7NmmFCFfFN1oxo5Wpbo1B6EqP7OoQU/c=,tag:i0ga9Vomzh5kpTd5F3Vr8A==,type:comment]
-    TRAEFIK_IP: ENC[AES256_GCM,data:T41LHUJNYdtQm9T9Aq+i,iv:98pnhOqZp4kCQLRmjj9TauQ+RCjluQYxLcXPXb1LsOo=,tag:8u0iMtdOdsX9z8Y/J7o1sw==,type:str]
-    #ENC[AES256_GCM,data:nMLDzHEQTI1SLlDe9JEOqPZmJGQZvFAKVFyYMa5aDrXi,iv:5fCJNwxEBOPW/P2CpJAbCNQ+ooK5k6U2c/2DkHO6bwk=,tag:5qAyDexhmuqTivorzOXG8A==,type:comment]
-    BLOCKY_IP: ENC[AES256_GCM,data:Y2aCi3BrXzvae2CcRRKZ,iv:QP15UbapmZCV5MngS9N/luwMD41rtCqqHWf5+6CsJB8=,tag:8kF6lUdth7cZkqWsa7Mrrg==,type:str]
-    #ENC[AES256_GCM,data:RuXXcF7BsFKj7xFwhKZ2l1omh50FQMjG0R6jrgmGMd7FeoM4e8dLIZKSFVkFJ2QGcJzDVcvPgvuuqZLBLiCQr10G1UNUNsZvwT76VYcR2Fs=,iv:JTvMuiGUhRq8ds9NHE++mSCqmjj7K/r5xYJiAppXxos=,tag:mquqCt2Vid4g2xQKYgeZKQ==,type:comment]
-    DASHBOARD_IP: ENC[AES256_GCM,data:EZa1td7qvrjJvP2F1zdQ,iv:nd0ar42M3XbMOhzSjn3x+3tU5xJrt6eZTd/cWrpQ6E8=,tag:Pr0wOdq7QT+bFEMBsY52xA==,type:str]
-    #ENC[AES256_GCM,data:4uqsrGcA3dLzrfksd6jrvWLJfDbTV3vkI6nxISoHC5Ft1ONysWECQ8ikKzyITQ7ybOV/DFpcSnCSbFDclFX5wW5UKnzjjlei0fBknXJZDfBOoV7x930d,iv:sF32SDMcF5bmMtO3eGpjXXUX6tOYnMS6DohyJSjuAC8=,tag:aEYGoRdmeJPHl/4xatFrTw==,type:comment]
-    #ENC[AES256_GCM,data:kVqYYoDj9euFzokS+jiXX2aoslaTSN1bqh8anx0SDf4Sie1KRH74ct5AvgMmlOP4DZs8v/5stbS7zqJcZQgvlEX43qe5WgDwol/5gkewxdzBVZC6XL2RFuQ6IiKT+/GsStPNoW/Xq1O7ooSJWJ9CxspqmQFwbn1sfbslNg==,iv:VMnQ1Ibkamw3yQvoS37Mr1O1G2sbf0RD8UqIcSWkTLY=,tag:PlqUp4JiW/O7QFnuqr37fA==,type:comment]
-    #ENC[AES256_GCM,data:OlYawBUAq1j3bgj4NrQh6IDfWHz9XmiV7aybr7rof44KmpU8ek54GOpy96gdOT1fjy7t57GcqtGHsFxtoaV7RTDhsJWHfXoGyfWP7q+Bmow=,iv:hmclDb/UPX0TBjM2/Cjxiimz145EXc7hQFHp2EskxFo=,tag:9Yp8ARtnKuPbYQUJlBGo/Q==,type:comment]
-    #ENC[AES256_GCM,data:tk/HUcw35yeozjuKerzw2ru38OJ7j9d5dofWm+Z5S8hLaAbWuz/ptoW/MqaiH0A4ZGDlDqZB,iv:g2ZiNxHMKHqogyqxk/UhHwARitoyAIwuLX4Xlg3MJjw=,tag:6pQ8lxCSW1Gf4xoN68CY/A==,type:comment]
-    DOMAIN_0: ENC[AES256_GCM,data:kdkvxKsb3c7LThRw,iv:ezF8jLeOmgWCsXKAfG+Rv8cVCZ1bpOW41qSwCQP25sM=,tag:GGr7xgnv8ocDoVvREqKPgg==,type:str]
-    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:9WF+uoFTpd3PfiHS0Tqp4MQ=,iv:aqk5P0JDcHZmLkqIXGqgfqvuOv2YCADX/F2m/pZ0St4=,tag:0KrhdzohE4Yz/p5gmoy5gg==,type:str]
-    DOMAIN_0_ZONE: ENC[AES256_GCM,data:FFOO3/qIRApJyPsIL15sN54YxzIAJPVVX/xHytMoEAM=,iv:QLvrQUKwQ0hf12aTyr/xZ7fP81XNEX5JVeyCCmnfE90=,tag:SvvB4TonGLMHGvqdOuMVsw==,type:str]
-    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:JYvbthMc+U8hkWzJtb8jNRZ64pMEQ79agLbuMxH3KELyn5G8syYvMA==,iv:HCaWezbjuSIrS67SnyeTdjw4fVH8RtU1lx9DNOeRUCY=,tag:cVMDuUqan+DV8L7lXhRcSw==,type:str]
-    #ENC[AES256_GCM,data:rLlf8VZfgPXpSBTGph+OhotpsvvdHjNlSRijOZDfRmIFb60gH7iGDE1d2ce/SL4Jmc2pYAgYH9BF4LwIr1jFDg==,iv:3Otg1o6fL3CcPy02osWgXiyOesopnoGtQfTGdtqgIjg=,tag:SleRB9HG9YhSVdujCHAAXA==,type:comment]
-    #ENC[AES256_GCM,data:r4Q6YkV2ceQ/zxskpuVCqUFwaARMhpsEpEVtnxFv3bsyvKDUKljYhRxcrcLS6RmXutJ9STmH8LU=,iv:WEfX6yKUK1Qbit3T4KDoa3Lm8fAGitEe50geMqRLqQo=,tag:nnAtJJ+jn8qt7NR4/CXucw==,type:comment]
-    #ENC[AES256_GCM,data:XdRDsAy97lsSNM14zcU3lgnS3Hj4V6ZXMQ==,iv:u0hVi879zqo7Epy66xlBJzsz+wfg8u/zsoYIHRz03ms=,tag:7jN7m2TT8tCHLyFJUFCA1g==,type:comment]
-    #ENC[AES256_GCM,data:QQs5M2QsgOt81l/JDqQRnW7848Q2T6yQJT1QZPGgG8hmZrWxijbSFjreU7loli4s1PIsAF07s2kCcIVK1l9mlJtcSQrH6IS9UXTRqFE=,iv:YkPaEsmIgNaOKMfLrqOAnfIEmLWXw6k3yXG7Dj1Nsng=,tag:/ZVhyBMwMDyDhuuXyIjtDw==,type:comment]
-    GITHUB_REPOSITORY: ENC[AES256_GCM,data:lMw9luBQMgvd33jXPbXUGAaeIS+8IS36Rm43Na29s6l8p8aJt0v9UDiVWhSk8rtB,iv:8GYugE1E+aV09M6Qf0MYttV7vbXFvCb55ffjyJtSamY=,tag:3ZLGNmoa4TmZv039+U5bDg==,type:str]
-    #ENC[AES256_GCM,data:qEtRZxUjeRn4VEqGyvYha1MKFJcQwH13jBJg1klLjdm47PbYU8gP8Cz1bKKnOq48ZCtFOodaipp2M8RFaqryvqibx0GB1Nw=,iv:oji8FJkKGzPCf+SNsJsM4PoFs7QTJTckAJnYueko98U=,tag:CGmOYIyz+5wcwqENQK4rIA==,type:comment]
-    #ENC[AES256_GCM,data:tIs4dN0eIxbI6JL7u0xjtZGm6ruWuz0wEjV7pskmY98cKBRd9trTWfPJt58VCLXaVc+ACP4H,iv:7oz2bXhGgwpXfpJmp687lxlaOK/eP4nkwPSOveERy70=,tag:RS85LcMBK9o9++fXjANX7A==,type:comment]
-    DOCKERHUB_USER: ENC[AES256_GCM,data:B0RVI6B5vw==,iv:MDV5EyQFbvhhpHQ0XAo0G5Un0t6yHDSd1u4qTQPWQnI=,tag:nMjxWqno5snJlZbhLQsfYg==,type:str]
-    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:g1qoEjwFHPHkLqTiiBy8bIvlboc=,iv:okKBUx5oUBIyj95Lo7CuVa7xVATxtthUxH9qkC0gjds=,tag:diqhqvoNnP8XJnZD+2YN9g==,type:str]
-    NFS_SERVER: ENC[AES256_GCM,data:xBTLGBp2JRa0Ti8=,iv:afczGrBi4RUdKcrRJjbhTYtM4MrhP0cTIjqsMPpfD1Y=,tag:sKPhE2D0Fn2oEM/9zBZ0cg==,type:str]
-    PLEX_IP: ENC[AES256_GCM,data:TRcJ3QqUu5DpqAZ/5qcZ,iv:P+CX7OHICCtTCfeTZkALZccshbCAyY387KRI+vRoC2E=,tag:334bZIqNqE/6laMHMI5/fQ==,type:str]
-    BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:99XEFXnYMFZCm5tiFhHN+RrYkbuZKRzZGQ==,iv:3jCza+GSZuxeMTx+MUzcBBB4XD9TELQBxtp24YM2stg=,tag:tXsRYi3o6HG1HsoUW/AS6g==,type:str]
-    BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:F7YFB5Lxp4b3t/aIFbZ0SSQEZv98Ad3R,iv:MhXMNTmDXziTb8qparNEL6DKjh3MNhMKjmZnCXSo5Iw=,tag:e/B0Pijp69AzAoB1oEU8BQ==,type:str]
-    BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:P1ApETkaDjg5RDvpYwdVU2D6,iv:7QFATs/m/cTpc0PZch0OU3oymtAyZLKXW5eKtp+mZCE=,tag:t3CsturcEO7Ryp95LJk2jQ==,type:str]
-    #ENC[AES256_GCM,data:yfHVtqTAx0zH/xvbqyM=,iv:enJmAHfI+fvHrBZ0rtIC4yg2lj16C98yUWMrW+t+Ayc=,tag:yJpb7JTALBXIKp1t4lyZ9g==,type:comment]
-    PODNET: ENC[AES256_GCM,data:Zt+yj2JJ906DnY8XcA==,iv:fWybdmTeG1tPnoJI/PLhdpPcWMg6ur6kHdvVv8bJXAU=,tag:Mb9zcXvKiA14EDDWAjP3XQ==,type:str]
-    SVCNET: ENC[AES256_GCM,data:8PVUqGKiOsL6ELJ82A==,iv:yZT19eUdcc6tRyc2HCCdS8BXjvVdXELxJypmq2HLLPE=,tag:CrlP7TzDY2Vxc1GThWq3aw==,type:str]
-    CLUSTERNAME: ENC[AES256_GCM,data:od40yg==,iv:q+usnZgTq/CPr8AzymGCj7KtLlh0KfrHDqDEYelNOQ0=,tag:LNQURNL7xGfeRD0V6DYAcw==,type:str]
+    #ENC[AES256_GCM,data:yhC2Cd5nVGb5ya2x6+iQb3QN3xHxkqTqt8kL4TF55j2vi4vafPw5pw2G8oFRLRh8ICuQAjZcyTRYPF9TLdhM69Y=,iv:1WVHF8qTA9HEA2VVwdUITPXzxqMTQppXj+7w5Y65fko=,tag:gq4Ukp2njqw9/Z2+zv5zlw==,type:comment]
+    #ENC[AES256_GCM,data:07Eyut7FCeX81WxpaOsnPjxmbjJx6CJRlmQx2944/xMDkX+ghkRENekoViY=,iv:TS7lwVZ3o2PSUv2lEJMEr2Hgw/6SfHej8bGflKO1jCU=,tag:5hg3gDHvDlJbxaeZa7m3lQ==,type:comment]
+    VIP: ENC[AES256_GCM,data:1BnAGzM2NUL7IsA+Sg==,iv:cUnT53QKxgyMnUmCxlWjPWaluASsY8VdQ+NHd2FMMSA=,tag:oOQ896iRpD2aNn6y8DDPEg==,type:str]
+    #ENC[AES256_GCM,data:SpIdPro2aZlERWL3dluRpaetKqrcujNPxFmc,iv:aGHXEcS6kf1zrYrvGyWVx6d1f+1AmMwrt79BJYpHaVU=,tag:ej/Mhj1vOwAy3ei9aI/qUA==,type:comment]
+    #ENC[AES256_GCM,data:aBjHYejTTIS9DhgGfqChxTnmkWpEwAxcXTDTu92Rvu660nyuTQ61wKGB+jtzdLY/kinGyV88DeZW7A9Zw32YEmgmI8SCLtjCWdBcuhDiP99AdZqB/QNU8kQ=,iv:umLBD2DnTg/w5RzhokCdI1rUEMdTGwT/8mb4CiS7dOM=,tag:JeykSLsDNcFJrG7hLyaUnQ==,type:comment]
+    MASTER1IP: ENC[AES256_GCM,data:yeH/riKsKKJhiIFADDo=,iv:eP4XSmjNBptRhGlcdqGrr2TtGK/gs+eKJnZt6xfPu5A=,tag:EKC0AknYiXsHdeytOOyV1A==,type:str]
+    #ENC[AES256_GCM,data:1oXjT2ox4WxF7RDGTWgvrt+n9H8uOp+Bi2ZNjvYHzvScdw==,iv:1uUMrZ8JuR/RXYfeY0eAY8mKYAu8TI14KqlVZXOA7O8=,tag:ZJCvN/BbcfJXHD624pyITA==,type:comment]
+    GATEWAY: ENC[AES256_GCM,data:jd8kZQFkD3hsFyBDkw==,iv:0eA6TCANPC6uMzi8eWeIamdJ0NOO6B7lY7z1OujH7eE=,tag:XAfP5gTjBQaFcxgth8Mqeg==,type:str]
+    #ENC[AES256_GCM,data:amt/F+HccJrP1n1GFIpRrtWCV2o632gF43RlhcoIE2cwIzf1HTcT60Z2JRXUlec=,iv:BD9M1zx9r5qqSKPM4HHKsfONl1qkB6KmQRwA2IMw8nc=,tag:qEdJbft5/T8MKYLsTO3Eug==,type:comment]
+    METALLB_RANGE: ENC[AES256_GCM,data:7YsDx1qBuAZ/2q16UVFT3Zg3V5gD++5BN0/D98ALww==,iv:vZvyPQDWJLh7V2IjfYSm4/5+475xiXz3yjcgIA5iZEk=,tag:dSut77kUVHTX26nrVP8uvw==,type:str]
+    #ENC[AES256_GCM,data:vmnsJpacio8OoJv0UWzLWwiioZ5zswe33zkT5Z/HJgDUL+87jgrCBn2pV5F1s+Hbg6KlIYfA7JyRYgt2o1jFBJU47kO62Z812K7aSPjsXu5zMw==,iv:TtgjaHublJDAVueQfM1OZS/Ykx/SPVZgthzGQZ7nZBA=,tag:GERCPD+dhFzoCJ5ooAp8uw==,type:comment]
+    TRAEFIK_IP: ENC[AES256_GCM,data:BgJc5rG7hmwADTkyaeai,iv:eW1lnxDGYS66oMuKgFAMVjQ29mLh1P8TVLTeD2dRW6o=,tag:Wq+GnH1DlU9NZFI9wY3sZw==,type:str]
+    #ENC[AES256_GCM,data:FEVivWPaSiaHcwPm4ELrg5ENIUrY8BaTF8qJ19h+U/2C,iv:6n/xoVhxDKWWSQ/nFZB/smNUZkRWDH7V8fCFDPuJ0gw=,tag:XL9GQa9NtToYIWUvpYxoZA==,type:comment]
+    BLOCKY_IP: ENC[AES256_GCM,data:AKjif4DaP3ZHzbZJP9d9,iv:VwAx7e/UaGRPHAnvLgv+HFFh7kDAhbzzR5p+mWzLNGg=,tag:dJDNXEeddA/TcFZ/GQ2bsA==,type:str]
+    #ENC[AES256_GCM,data:/g0Wq13xj7ei+C2J4Nm/IbfVeTqUUbmoatOKgQiewRfZ7uK/Q2bytCn42VDnXN+ERz9PWY2mpbQDd7SMjmgeMK/93KpPliJ1BWkspDlz2Gc=,iv:RuGVFVzqFs30Ci+d7TjoB/G+EokiRE3w3vXXnaryd/k=,tag:RTl76lxuZ0ulaps3kRAFCQ==,type:comment]
+    DASHBOARD_IP: ENC[AES256_GCM,data:OaYSdv5phZT8cHI+duB/,iv:33z6Etrh8pmQgR9UjDyCqFE++2L8qiRzGr9dTnFxc8s=,tag:K/pLORuVf65IJfL5SFQn1w==,type:str]
+    #ENC[AES256_GCM,data:lz0Af26rITcXQ0yvOk5kc7MC7iAIHYExHEdTqlRklyzj2sMWEsvGMxfggDi1ceZ70sPm9/+ylEgTQD6mLamfjPZQAPM6f1GWsDBgYnVYBCJwRE5wSpVm,iv:yXBR5agN59HQHJZv8uvPsjWsMnEryb1izh3nNNAfk9Y=,tag:mzmUboBaoDt/91bQ98nOWA==,type:comment]
+    #ENC[AES256_GCM,data:/ztn7P5Bkiy/A4JxJqfSY7+jwDSlcpoil7yIWlBS9P+yu7mJ2eMb2gp33SeLmKpIlXOyDaSGp0GXfGmkSy4ZeCyTr9aPTzp18Y5KBLR1usQ82x/LGUwYBewcSO8vm/UhTcsOeQcCBF9p5xb3s3vsykIPFz0yUNYM1zjCKQ==,iv:x3u6bLpq9PaE4+1yWtWkNdQfFRmAGmr5l4MCnklzZVk=,tag:EvfMFVQb++zX/bsOo7UBog==,type:comment]
+    #ENC[AES256_GCM,data:Pmb09eYNlxTMwyyz53wvI9HTy1eh+i2hPLEq1kFVqiQxewK2BQlkisqcG13/FFty8l5YyI2sUfC59GCnMwHjJUVvo+w5GZLmCs3ooOjNzxk=,iv:Of4yOGJr+2coq5ttfPLjoBbKGa1F5usxGLCj+u0kqEU=,tag:xp7KfTq4WAg3JjQT5ih/Og==,type:comment]
+    #ENC[AES256_GCM,data:Cxf2SGdDTbKopUVN7DYoYVWIcJPMWAjVWu+GVtl2hjF2AYjtLF+5QsGrJ+9e5QjhcAzEk2s6,iv:3v9U49SxWdwxq+M4PPLR2UF9r66lfwPMK0j1oC6lJVo=,tag:1YBZtvSr/x9Qv2zdz0sStg==,type:comment]
+    DOMAIN_0: ENC[AES256_GCM,data:7a3mzgIXdh1fy6Af,iv:QUCLTo9Uxi81tTApwmR1mBayoQ+ozToPpjbbChieIR8=,tag:LQuLWYPJhkwRnUoxHl4Yvg==,type:str]
+    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:XT7etgbK3uuerk1xSDG0tTE=,iv:5ITET+ufJXKIS/NGPEcvkz0aC6ZK+Xv8ORT0dnNaFP8=,tag:VudV0YkOYN9soqGzeKAJkg==,type:str]
+    DOMAIN_0_ZONE: ENC[AES256_GCM,data:HmCB5dRwl1sLzyRDgvFcPO8qv6LJB2pkGTUvbXbucU0=,iv:S12R/tdA+obV3G/M13YgpWFO0tXiba5Yu5LEmyDa550=,tag:RVSMHLkWrKv2bnvyETajoQ==,type:str]
+    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:fIIHvs0ORPdgctJJZAyXyF2Ezr/aWViHMbpVomBN1e49Asxck6f8dg==,iv:mcOo6Ey15QPxdI69ac3Z98XixHJ9JKZLDbxnDb0pIq0=,tag:VALm71ZpEuhCBKIrU5DH0g==,type:str]
+    #ENC[AES256_GCM,data:vth+Rh4wjy70VgnWiPSlDIqTcAEGpBnM2caQf/bffFgJsdkgvfr+IUU5mlc4mO2UPdcYsoWVttZCUK06fwIKsA==,iv:64CSYI9XCRFFanDfTMyKHoeL0KU0kp+/9WKTZXgWPz8=,tag:iiN1MSVtwmzz6dLf1IPXgQ==,type:comment]
+    #ENC[AES256_GCM,data:1Lg7yuwJOqlblZodR28cHrtdbmy9lL0+cZaeStd91K7u7jgEUg93nCfuHvhAOh2q9F6Qx/HU1no=,iv:B1DcvZ+fQCZCjxc7V/2DcXK7PLq1NvNE4K8y2eiBCRA=,tag:ZK9nBWStnmZc+iYjHMRsMg==,type:comment]
+    #ENC[AES256_GCM,data:FqdWhp8oopgHkyH9fl2FliifdeTs1vUcvQ==,iv:xLCCjO7QXO1dgMTKKOfunKSEL5gy8aeIgEjUeyjgJ3U=,tag:i4dOqLweLXREjmZBSlrxLg==,type:comment]
+    #ENC[AES256_GCM,data:DmkugeObI7lN8iVFN4hTmZAQ/R22pOXoRmAA/x6HTKHJvV85Ka4x0GqHqsdikv9PWMAw4YxL6k03TwNv1K+rVa+974ANp9Aqiwb+eDw=,iv:O6Ie1/pQv86Z0E4+0X5/sWZ7FQaQmOWZSaLr567kW0w=,tag:YcSJlZV7B+f99nH/DwSFeQ==,type:comment]
+    GITHUB_REPOSITORY: ENC[AES256_GCM,data:5WKvoGxaQSt+vaf7nlIRZhhkdwqawZigb+I74lsgUl4hKYdlA3xv8CixOk3E8kT7,iv:4JaAsagIYQ7c7g/M5urpdx4pLQZWlqSejLpwn5iiZhU=,tag:PQuHlHWXlj37sgYvXBq9wQ==,type:str]
+    #ENC[AES256_GCM,data:2lKRVRftOe/BJnpxmoshJa90Ng0utjfUtZm/HHyozpnKZxPRn7qfHCjIxMJlO+Tt4XiTetwWVSX1mGS+RopVRQXVSdBgzhw=,iv:FP4Q+hBOUy5am2IQT2tfifB9VX5YH5ABqNybyDNKy+4=,tag:ct11II47R5W2KR9rnwNJxg==,type:comment]
+    #ENC[AES256_GCM,data:+rfL41AAWoHFx7tD62j66LBAyPeilq7qaJfg52XWiKnH02k1Qd0/Loy8XNmAYg1RflAMC72B,iv:MtbrMTeJK8MfpinQpP2nIhJF0PzBKJutwWuvn3urFfw=,tag:9OAZUZEiUgIhcGl6ibbjAQ==,type:comment]
+    DOCKERHUB_USER: ENC[AES256_GCM,data:2r/51HAE8A==,iv:d20MBuW+k2un6a1G6BD5jQQjJujD1hKDKBwLGN7eXU8=,tag:uclWwQ4YE4uxI4Oshb6jsw==,type:str]
+    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:ND78lt7ejqSo7pHeCpu2NXDbQeQ=,iv:RwBJNrBui/Sg4pfNit6UJ8i/O2OpRXunmreRv72/yPY=,tag:Z5NhdF4cQxRdnZGmtF5rqw==,type:str]
+    NFS_SERVER: ENC[AES256_GCM,data:3JqybUtTK0PlMHw=,iv:ykCI8KS3tDVcgfUfHNsvhtQxll/xisoPGOJL882Wfuo=,tag:jKOAYPVHX+GkRZkBXkLpJQ==,type:str]
+    PLEX_IP: ENC[AES256_GCM,data:9aQM27oNlViSLnJAFID+,iv:o0sQ3n9cdcapJ0TkeeVgrsxqsj76SotB/06PAH/y21A=,tag:cp6y9uf4xAf4V4v+qQkyYg==,type:str]
+    BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:lLYo+LB7b14Sc/6cl2u1sr25lOjS1SqqHA==,iv:Tv5CbyEL/fpIuflul3aVk3Y5LtqHFqsJ1gFWYfm6Dl8=,tag:0rRL9qAm10YFQ+/KjpNu2w==,type:str]
+    BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:lWcxMeY8BbABcRkDtwf+54oVpS49R/oy,iv:/CNYE7M/A7MN/EcCrXyrk343vJTkyRBwMyYJXgR8XVg=,tag:9TwXf6c+L3+AiECjHtRtjw==,type:str]
+    BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:BsssOsucB3SHleJcGgzNmAjI,iv:2Lm+sBaUcFDWYebTIe809Ac9KWywD4Lq0e+4o7pU57I=,tag:8IqGjI7E1aTbJcmm3pcddw==,type:str]
+    #ENC[AES256_GCM,data:k1SOmTSsMOqzRSSciXI=,iv:FU+lODwt99pqRDoVbae1Gk1UjPfk/Q1Ve5meOEuJgus=,tag:43lhuAD2urOtRfkXLRtwrg==,type:comment]
+    PODNET: ENC[AES256_GCM,data:Uf4tQ+9eT6CdOfAOog==,iv:L+9bx8ge/XNFq79CbZy3Cj39n1y/LgSPgFXfSdOLVIg=,tag:2s1SjkOKMDORokXTzDwQsQ==,type:str]
+    SVCNET: ENC[AES256_GCM,data:NHVhUvYPkW5JPDdNsQ==,iv:oWKpOtmNRAEp507iSmllbOf2Wsdy7vgdftcL+WA+VF0=,tag:zdqYr84vJ20O/D294j0JDg==,type:str]
+    CLUSTERNAME: ENC[AES256_GCM,data:zaYaww==,iv:zRas0C2Qy2uzc/meoHRJuYP7yLQuECmyv2J96fwCtoM=,tag:kLkEyVt53ZnhSraWX+PPLg==,type:str]
 sops:
     shamir_threshold: 3
     kms: []
@@ -56,14 +56,14 @@ sops:
         - recipient: age1xerwm86t75dl2v0sqq5xvzag5q6deawx5en7rqy92886049htaxqagw7yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBUK2RMajRqR2xjRXhWWHpo
-            UTRHQUNmZFhXcVF0aURnaEpwNmdySjJjaEJRCkppa0NleTRjbisxdytKQS9wTVo5
-            SDA3Si9MVjV6bGlOWU41KzlkQTdvMEkKLS0tIFhhVXYxaDJ1ekZ0bGswS09jejJT
-            UkJtYjFwUndKc3N2Z0JVM1pwbkZrNTQKHK/V5zOIeEM6G8RhcHaAXNpxUalgcc/N
-            fzfvv5Ultbo5Vsuvsxpe8nDCDvjoLaIuVsxrsVHuaTQXhUqHEXN24g==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBhdkdJZW9NQjdqNUhhMlpn
+            YXhoSElQRFYxeXNXL3d0b2JIL3I0cm9nZFd3Ci8zbktoSkZuaWN0MWlMMk5yNit0
+            NmNZYXVYUXlTL3psMDRuKzdIc2d4TDAKLS0tIFBzR0xUVzdHZTV5Mit4MDdwUEVr
+            THkvRTBaWVM4YjhldVp6UFFydkZvcW8KUiLg2MMQ/PWxVzr9ik1weCbqe8Kz4dh/
+            JyQjddKT4dtQMAF82SxMG1FVjMt2ysjGrCAH+DXuAZvakG1054nZeQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-09T15:06:13Z"
-    mac: ENC[AES256_GCM,data:ew0XvCYdoHDnLn+NKzo63LwSUngenr/fRdvW24QCqwm63il/ivUICL1vxTRaLfTaR8pOTCnf6plj5r/EPSpqgT2/fBdhPXnpN8CYHL8LKU3OAbEX69d/fj0wm3hk1SHsZmxNqaCePj4Ga4W9ya+zvABYsknHwHSgq72KPQmuqhM=,iv:WoHHQTtNrqHnEBlzPfSUMZwPL8XSsooNdDe7U2CI0i4=,tag:zWxEz82YvnRuD6j+u4MMog==,type:str]
+    lastmodified: "2025-01-09T15:07:55Z"
+    mac: ENC[AES256_GCM,data:jYLi1EXDDDfS3CtvB7klb3mn+0+YyNvAggN95unMTbBX9GCJ1liz1LBzI7+LzGeHTeEKrU9AO1JCQVkRorI0Z7lxwGLhJ2TKwzx09V91qibLwU3SCat441zIDTwfcZsPv8XhmpztDbK+D+kSxSXAGx8KOkmS92cdb/DGZDJxH/o=,iv:O+y1F6dWFeh849zQ22nkOgJ0oUO1L91HPk3qlaqZhK4=,tag:thG9tRcOhRAWA5yk/uQacA==,type:str]
     pgp: []
     encrypted_regex: ((?i)(displayname|email|pass|ca|id|bootstraptoken|secretboxencryptionsecret|secrets|secrets|password|cert|secret($|[^N])|key|token|^data$|^stringData))
     version: 3.9.1
