--- a/clusters/main/clusterenv.yaml
+++ b/clusters/main/clusterenv.yaml
@@ -1,44 +1,44 @@
-#ENC[AES256_GCM,data:HSJDGT0MmusIEnkmNrjoLLo+POiRljmT52jNY5JbtN7b9jpz0phBL8K/eO3OY5YjX+/+bERXyGGk41isX9rznxo=,iv:Fp84Ih1d7Db3dke07NHW9L/xQBRsRPg8q0u2tKXCuoM=,tag:tR7p/7JbPhuybiXygo7TvA==,type:comment]
-#ENC[AES256_GCM,data:nFChhmKM6KEDBfP5AzO746BXYPWeBfWQFkQC2lf2Q/TgS9TbPaX/rGRa7Lo=,iv:pLIs6lNLpDeAE6Hh8cDui4sG86ZLvbEnsccb38gRKhM=,tag:sIVEewjVcoYD16g3xGm8Lg==,type:comment]
-VIP: ENC[AES256_GCM,data:KCNTC2Xa2Ll3sCrw2A==,iv:LN3B8lyUflr/XG8cGIa5pP9DmB/zGaPSqgehr+j5WEA=,tag:+TVIVguBGRR0+c7QqPyJ0w==,type:str]
-#ENC[AES256_GCM,data:16P3gqEcVzRVPnl0cYadyqGW0cEpQ3WSnJgA,iv:gA2+2FWNfShudQSb+yjz4ISGloTBrKsFMlQdMf2SGN0=,tag:VaNp8QHqn3OmGIsmXan2Mg==,type:comment]
-#ENC[AES256_GCM,data:bYXaOkKXlzvFxRMDH9u6FOExUyKlmM726Sq04Pt00Ov4ggq/KeyP48YrhhHpXUccCIgJeqxmwRwQdgwXC1fSROGjAccGixVQ0mdBDgxgeiBQ6kp3oiLQaMo=,iv:NZxykkYxEyqYG+w+KfRgTH01TTA1HfsIx6UgRG/BzRU=,tag:JYYUk8lwUSVrYDxV/vFmug==,type:comment]
-MASTER1IP: ENC[AES256_GCM,data:Paivv2oqlRziXH96Myo=,iv:1Vb1ONL+MoE7JnSSHrSttNS3hj2Zy60TM+Ot0JfAhzg=,tag:YAOjuEek/HNshZpub8EJYw==,type:str]
-#ENC[AES256_GCM,data:XWCSkcfLB8tqyQbs27w5cRpwcmo5JKHH439BSzVJLUgkpA==,iv:v0i0ne/yoOJCldhm15/O7DJyQvA9NqbakjWn3HMN0E0=,tag:jxmbqWHx6HSqMixGFTruMg==,type:comment]
-GATEWAY: ENC[AES256_GCM,data:7+yaQkhHHeC+qRrqyg==,iv:u66rCiem5j4PPfZa2V1fNAvjxWdUnZRVmMHHtQFgrn8=,tag:PyqrnsndNP7Gr+IACwjMrw==,type:str]
-#ENC[AES256_GCM,data:kHNj/TBTrRd/a9gZA3zscDzOm4BGA+JLMqFKx/vRDOQZdp3JW9Po6hWrIIDICRg=,iv:8jxezANXj2/gXAZrXVPYiZwx1uBSkCPuHxp8u4FT7GY=,tag:N98qpQ05fW9hggtrvXhpCw==,type:comment]
-METALLB_RANGE: ENC[AES256_GCM,data:ulT4JzAzXR7fqSw/ZkHZv12X02/2ojMcucfUixMtKw==,iv:7Ogxulfma2mNrziQAc/xRErRij77+3h3DndGk1ORjv0=,tag:KvruCIXIAuatNp+3nBORcQ==,type:str]
-#ENC[AES256_GCM,data:gwY5IMd96CMU0N4PSev4ySpAIo4Q/paLPH3xgKXd2t/GZyeUW35j5ONTRJyW8oSVOqYP9/O9Js0VU+gxxGquir6MYBI4BijWYCQYKEr7n6aTMQ==,iv:NX/8anTiiqXhQeMnEYHNjIBygA3XQORyL6ZjzcAsp+8=,tag:B/6sFFDL8BWoQUaqYIfhBw==,type:comment]
-TRAEFIK_IP: ENC[AES256_GCM,data:PgyVJevsgiunh3eUW9St,iv:K3MeJsRsiA5MtDLVh99v2cUXAzelkOcpxomyjq1XCkE=,tag:jGzvLuz9XE1dPYgWzZ1jRg==,type:str]
-#ENC[AES256_GCM,data:dClFpoJEx3rCLvhf2dM7cT+bQGGdky6sRbZiWpASnQqH,iv:V/dXnDf4grm1GsqDXo8vmvYbBIpeVT3ifct+koy58GA=,tag:q4JK2zV5Q1OV2EZfbSwDiA==,type:comment]
-BLOCKY_IP: ENC[AES256_GCM,data:Hsnjrh67Qba5P01+SJXH,iv:Kqz1NGh4QE5pcUclahe7yVKamEVVsTscNVdO/gfBh6w=,tag:JFdZTGt7fncR280ptZoMeA==,type:str]
-#ENC[AES256_GCM,data:LIdfHX9kBYyeiQab9ogg8vqJ7tQPczoOabAqK7a/sjZ/lVqcOvCaTaFIXvfFQnBfd/HhuinbXuwqVyJjiz+GSf3dhFuXpZMxr+3qNOewN4M=,iv:iElPC8ZkJXYYeFyNe3F4PLDBItbxW7jJMUoM8NZ8bN0=,tag:1r+jSMKpFMl9T7NR1Z9IAw==,type:comment]
-DASHBOARD_IP: ENC[AES256_GCM,data:NpaxbvzGWTHFV2p8qV1+,iv:4ZMdUe73wIBzMeAYgP09tnX2I7nwEacL+l0ub8B9BkY=,tag:ZigCnemKbS7Ft8UAn8ZZGA==,type:str]
-#ENC[AES256_GCM,data:KRqLL4ZRDusK1Z1UYMPhBgYO/xgYmBHbyxV9d7ge18vnQL4qWgiHAJzoWPnX6nkuer2KdwaoRCMEImHqRUG3ogmI+kGmmtdbwl/tpGnkMlrV4xzU5TUt,iv:w+K+o1HwvRCCP9dOvlo4Bl2/Miw3xkj83UHO53VgY/o=,tag:mpQa3geCuBIGQ4fCvLfAhg==,type:comment]
-#ENC[AES256_GCM,data:99HnwOfdzWPX5e5lhbI8CaEOmDqe5ZOHnlsOI/cBhjHiNaJEq5PW3SEF+0c4m0AvzZsPxV5kLA0Dz73d5hbsAhgeiw/Owi+irYQcTo8zTi85KhChwXuhj763bnuFylUZ2QTmOwvY9wqtm3QuO0PCdcoTwzK+lhcohJRfsQ==,iv:OD/sUTd2oNTs05KNuJgUfG2L4+V+ZZrEfa1AF2/iiRY=,tag:6VCL3xuO1P8gEPWfXrF5wQ==,type:comment]
-#ENC[AES256_GCM,data:7BL7bt2rEk/ArxYLx9wOFhZWBeajFQxaw3n4NaxtLDgzIjOwFF+aGrfwKovNv/swVLHYDSqrOdVxrzPxS3RowiXcUZe1MJzDLLj8FDBJcc8=,iv:IdoETRF9+Z6W9atD1Q26399o1mQtob1iN/MrOxhVGn0=,tag:tYUhnbUe4KTbBk/11/NuHg==,type:comment]
-#ENC[AES256_GCM,data:ODEQeiSAUSbkSa6X/x71cZAYes/HjlnRDSui+g/MW5EhN/E3plMGjy9ZMTADd1a+JGYjQUcN,iv:t0OPg0hYYnczEhDUqNA/TPyvhoKhy5CxnqqU0hJhJ4k=,tag:+UYt03Ay7gabPlFCaI6XVA==,type:comment]
-DOMAIN_0: ENC[AES256_GCM,data:Y8VgUhX+CQGM2CbX,iv:lE5XRVvr5111mGZLjRCinpZMOvonZm6+WcC6vcl+ql0=,tag:3H5CFe2v1NSc6RuTBvDnuA==,type:str]
-DOMAIN_0_EMAIL: ENC[AES256_GCM,data:BLYBJQyodhYfStlJUl/J4Ao=,iv:uVT5ulMqS43BzKn6sbGz1vy6/G0zi48GfceFwicLMwo=,tag:gSgIrRKca5AhawyCK7m2gw==,type:str]
-DOMAIN_0_ZONE: ENC[AES256_GCM,data:RcKP7J+eUnW0ASz/wd/V/LPyzQYeikcukCYflqMJhY8=,iv:ssR4UAiJGdIR1KW05diUbe4YaWaySB0hcSD/yTxjZrI=,tag:rsxiS3pCY+PbAjUUQZ+Rrw==,type:str]
-DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:uRZ//Ed6c/ZUypcHfGlE5Y0fxwSB4ZwMf+lZw/5WQg6cAxvgfSiqWA==,iv:CLvtUmiyqZfF5A6hM4MBqDXPlCPKsp913CdX3gK0cac=,tag:W/lqhDqsdCkrWXc6G1BjGg==,type:str]
-#ENC[AES256_GCM,data:paA25ShC9+lkg5djGmgooY5cwn20PbFA8a+A1YHQ6L7GFz3F0VNWv6OXM/F+TQuJk941+q5ag3BvtqNHd1q9Kg==,iv:iPqyRt03LGDhzE/neRm+3Vs60ATq7yeXMATPrd03Rlk=,tag:j5wdi9Z5Eq/IgVKSUanpkw==,type:comment]
-#ENC[AES256_GCM,data:3LJEEh5GXKPuTmwKxA3FNVm3lfQLkDa0BeKldrGU54IXreRIJM32J7eRKAVXY5phdExpmjOHUyI=,iv:vW40dLP5ZmH6shevuOzNQAthNbJ7bfkxFYdeeCMjgvg=,tag:jXqrQvhan0Stgg4+rcouQg==,type:comment]
-#ENC[AES256_GCM,data:JpfNXkQZX8R13szpaYhJiFEGOzvS3s2glw==,iv:2p2zkLQK0M/cz9vR3KV0TJXKZGnF3HzPPC0quwgkvPE=,tag:20ZHSfjvKz1g1uSdLzu0rg==,type:comment]
-#ENC[AES256_GCM,data:Tlm4dLqh3du7JeQdbibhQzBpr4W3JCRZypWMAwQEv1pAxO5HxORKV/ifg6VlTh9dC0tpdUwDFpTpqRJAMomXTtf/3mVDjHEoJy0BJSo=,iv:qslpkB1t4qJNr26uUUeuT9g+Pd4SX6mWXdCEBBIrhXA=,tag:F1Pc87mZjsF/A4yE49BSxA==,type:comment]
-GITHUB_REPOSITORY: ENC[AES256_GCM,data:aOIKS2TgROScxh63Vb8U9tz9FcV+xVYBYQEQLbBgswg8OUPdPfJBUQXU0pDrlO8r,iv:QLa2l0CobcxAV/Z97qks+2aEZRikb0/kIBWF5SKCfr0=,tag:fmwJr3k8iJ7XAWI+hvxeCg==,type:str]
-#ENC[AES256_GCM,data:fb9z9nZlRtjFp8gg/5Bx7cQW2Ku4IyT7skJXT/ziFazyt4SfxsOLQjhX/LjnCmHOkGT6VQ8ci2c8eQ+0jICZ9DdqNqIZpnI=,iv:ZPOa22M3GjcvK2rm01KOhdK5QwjwTVOX8eaLqwouYhs=,tag:IWkaqFjKwTOdpXuGvYGCnQ==,type:comment]
-#ENC[AES256_GCM,data:DE4edpVt18aiLFeLUlDwvp9HYlxHomvdfv7pNebxkDInJIDc9PkzX4WDVaAH13qgNe8Tv+uw,iv:oB1PWFynJjq1Ey6nCgEFm4s5wy4IPBKADU1qeteJkNA=,tag:HstMz1EgFIEO+oO2YN4gBw==,type:comment]
-DOCKERHUB_USER: ENC[AES256_GCM,data:imqkVHVACg==,iv:88beso2eiDTdKcS+4XDgnN4thq3N2RAGwNjS9+LvFRo=,tag:oox2W2H48tVt+gvf5su9/g==,type:str]
-DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:xMM8nIySE8Yi6DTCi9J6+W2BrQ4=,iv:7aCymW9gIlzWqlID5UM6PtTVLl3wNpxhF7OCKgX+sqc=,tag:HsT6WlzN8Qzvu3DgMbXr1Q==,type:str]
-NFS_SERVER: ENC[AES256_GCM,data:4OzMl3iAT61FYzc=,iv:YZ74mYjDQSUgdP4cdQ3vHcQdlXs9npdIIL8vvQ1l2cA=,tag:K8O7cEr71fp+I8idQGZ4+g==,type:str]
-PLEX_IP: ENC[AES256_GCM,data:UHp1O1lwD7VCkEsKOSgB,iv:W7tQDYDH2mJH87bdf2bNb6Mqpsg1azSyb131FMSnhH4=,tag:KrgEsHS7pG2F9Hc61pwz1Q==,type:str]
-BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:rPZ9G6qZQBhqE1YXvfW6KnlP/PcekbbmCQ==,iv:JiyTilzQ+VlcARMEfbpwiVZRGyFu4gU3RZ8m5QSCAmc=,tag:OwR0kYQVoIVoh2TnC36J4A==,type:str]
-BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:dy+CIeQ3y+HX9d5J3LVtV9AWXYk4Wh7P,iv:x4chnE5FLcDtau0FjKUMOyh0EcwmppgTeuYsU+k0Pp8=,tag:XL/RS+ozfnLVrCrLt7xtyw==,type:str]
-BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:PBfeHykicwiG5Vrc41Bew/8K,iv:NCJZKSdxp8i42r64yTbBdtjfP05VtJu+S0z2Cgn1Qf0=,tag:RCfvSbPj+NUmD9vISlmphg==,type:str]
-#ENC[AES256_GCM,data:qe3sPqfIp3J5bCxEw6Q=,iv:CQY+r11+RMW7W9vqwo1YpWwJk3PFTnBexAqObB8inAE=,tag:xzUuFM+OnhOB/J+YLtX9uw==,type:comment]
-PODNET: ENC[AES256_GCM,data:VHqoMFicCWW8ehHAaA==,iv:bgv5g7YeDsR7NQ33y0AsyFyjgcI3aoEvs5n5QHJPIto=,tag:iMOqTO5aKSL4bKEsjwpRAQ==,type:str]
-SVCNET: ENC[AES256_GCM,data:nIxY924kQYxpQvRLug==,iv:GUhn1gVbWqtWB2GkQja97113/oXPazNHLPu98k9PKF8=,tag:+PQztryylOH+8xRx1kiwlQ==,type:str]
+#ENC[AES256_GCM,data:Du5mmSu9wyGvPoaSzSKXH1PgLKTYcD32ovc5xAC8prGGoscp7ILvI0C3RkdR9IrvbO61aXMvfNkrhUuZpbra08A=,iv:IQFYwCbbVN5ys8T2dZmOfBPeF2XxEAvQ//n39hhKoW0=,tag:kwD8KdO0cP1SmdB3q/SSfQ==,type:comment]
+#ENC[AES256_GCM,data:q6lPi/F3GnuWCpdZ+UhFF/rqi+3X7vuHBviDNxGEvKIpqmtRQofHFkt8JAI=,iv:73xx/wiiek2r8AyVpzOhceRnEAR6BvdPVcTUBgBLGzg=,tag:+oPICSW/umVcXaqqzk0F2g==,type:comment]
+VIP: ENC[AES256_GCM,data:NPppRmGECoujA2RUJg==,iv:WJTL0umIfmIiNUPdT9WLDKD1rl8FkYGVpdU4sX+LgV8=,tag:kjBrG9kb5eQ1rBCtEFaWJA==,type:str]
+#ENC[AES256_GCM,data:bfcn2hw9BuARrGb3jVJi/oXh+dOrSWidtOwr,iv:ItCQcw75tEqZrKNUCg/L5BZfoXt+GxcY0ekinUF6yLQ=,tag:sPHFFysJZ8FTIEJ6ihU3Ng==,type:comment]
+#ENC[AES256_GCM,data:GW88RYGMnOH6F3erA7cL1rVsMsUvFaqjuDvEtHDLZfuMG1cQA5DQrZI2nlzLOMFQ0pkenqhgPsMkGiwMQ4BmpVCnHJtw0PCiMPssQnnROD7UaY6nmeyJIv0=,iv:N3zeqvRpqxDElN682Hjggp1FUFkKBabbyYLVatGxSJE=,tag:bgzSs7R2TByhs7lV8AWSCA==,type:comment]
+MASTER1IP: ENC[AES256_GCM,data:hbM2DIaeehebWCdXs4M=,iv:uvF7+oEB0aT9s9OGfGIV5giyE+v/NhIi2J9kU3TKbj8=,tag:ygDCvxxU+NzCe/lVv3lIEQ==,type:str]
+#ENC[AES256_GCM,data:ksYPoYBLZSTQlZgs53Jc9oE2HUfRI6cleNOfRmmFVB8Mpg==,iv:4vK0R9NivBJmSW6iextKq5zVnZYz2Otzl9hJs7PfGQg=,tag:sV4jGVRkGuuJsedxOeRlzQ==,type:comment]
+GATEWAY: ENC[AES256_GCM,data:ulOI8ZygEKYPuaJqsA==,iv:b6yaZ4RXf+jDJMycfTVhjZcpLOs4f3xVOnLwUsheEIA=,tag:w0Z0kCNb7eorl6FSBUOO9w==,type:str]
+#ENC[AES256_GCM,data:iLat/lWhqjYOHlPOF/C+V6DsweJLzt9evfzvKD0EPPo9gqk3E9EXhiAeNcFl020=,iv:X/4S3yGImMRD02ga1X6UY9Cjv+63gjeFjnqiZ3NWPwA=,tag:8qJ20MotSzOgKirXdjFgjQ==,type:comment]
+METALLB_RANGE: ENC[AES256_GCM,data:7QrsBhoOgG2xh4F9Bo15zHWVOlw7ZMG6C6o+l34p1Q==,iv:QY3wieAexjV4tQ0sQUxhrArDfrtO8/eds6g7EhXDu/Q=,tag:E94kv2pU0K/6Ww73zFwPeg==,type:str]
+#ENC[AES256_GCM,data:E34PsSyJm5RB7Mah1VzgGqSf5FBYAQmShnLWg+Slo9hvLed5a2kY7mPJmXrQmM00Ad+qIeVUS407qXc15DTxda/yeXhh2ags7LYZZNOb/8/f5A==,iv:+aI8oiBXoQKuQGaDNXpYy0BJRXq1n8v0+fjiBQaUTdc=,tag:b6l+sLQgiFiTnL6/G98vqg==,type:comment]
+TRAEFIK_IP: ENC[AES256_GCM,data:7ILBHOWG5xWlXIPxy6H8,iv:OKevgMGCMENbBMvVgySzcO2ZUPhXAf3XIkZuS9AVdE8=,tag:YhJ1/S+Yx4t/utBtq3keLw==,type:str]
+#ENC[AES256_GCM,data:LAFkBy/daZ3m/pFaUMKjQ4iNNcEueP+uhyyeRAgDwKx5,iv:XulveVJLLGgox6Q+lk9YxipfTSPekg+UgSNS0k9CJdI=,tag:TRWsGmjTNRtdn86PvhmtKw==,type:comment]
+BLOCKY_IP: ENC[AES256_GCM,data:ToxbHX0mJUrUP4bfMoSz,iv:6/jiLfpA2zMBNYj+WndGml9iDOGSgxXg0QuUW6VCKCo=,tag:ZffgWrCQ2V72pWEQwZJrqA==,type:str]
+#ENC[AES256_GCM,data:ZS1FEQy4eZy94D0tG5QNfFCcfm+RPSfHq9vb4WnZpN0MiguPkyBnbL3ZeMFSlgGdAwxxlxSjgMfwGlv9+XFnohUmHyrnuFq4r5Ve2SGRoK4=,iv:cvZGrSPR/T49AQ6UWVXkfV+0mCHZz+fwz/ks/Whe/Vs=,tag:jiNDZctK6DJXaXj6Rz8V8w==,type:comment]
+DASHBOARD_IP: ENC[AES256_GCM,data:cE0bGBrx/uP9gIPcDF/F,iv:clZk1JAK4HCRwAfodQUzhC+5Tqa8F3sv7J5BDpSPgMs=,tag:l9NK/ie0mNYb7hAtHnUo4g==,type:str]
+#ENC[AES256_GCM,data:VwpYfndM0yV/4hSI+pz8khJpmdtBfUbyyGNh+uhtvN+pPUtf9UagRgQa9E7RRWj3TP7wwrD2XdMfU2EGTaSkxAYoYXyRLudgr9WFziqCtZuW/AoFAf76,iv:w1OV33qmci91CqphBHjkGg0B4qUV6eI//uSqzfH2XI8=,tag:8LWHaV9C00dG8CXx4T/RwQ==,type:comment]
+#ENC[AES256_GCM,data:rm6+aeTAOlUC5JH1FciI0mxCc7hL0LnjsCFh0f86cRso2LtNYf35EQlX5ai0FttoLJo4LcjOoTwNBRONhcuuI23gDMHXd5bWATVzBFdgSpKukSUheUR1zTeyjR1LOU0pvmFcp1LVza0TvtXK52j1nw8Anfe3mKdwlcJMJQ==,iv:KvsYqLt4Wi1U7EUY4fU5wuOHT9fURibjaCsPVikXAS0=,tag:G/PKjPP3fQDj5Uj4fBPklg==,type:comment]
+#ENC[AES256_GCM,data:ENI/u70DvrKIqdF36wUdO1lHVJF8rGxl8Q//lFjbOAktX2ScZiBjfDU2PJer4HHnWxp4y9rLRXx+k76/aRyFAOSvM3jKWZ66nDym1VQ5GdY=,iv:qH9pfUbmbx58GAOKlSSJKJhNlCXYlr5ZBkcNC4exQ3c=,tag:spxHUa3KbmMClzNTQSBkyQ==,type:comment]
+#ENC[AES256_GCM,data:/RV+54WcT6wzRcyCfUR4p9N/ekj1xebvxSUeQv+CGaUPBVd/WichRekoQaARAfxYmG57SM+D,iv:Zqd63kp3Rg51dbItxf/hD3MTrMT+pBd2LAHDrDkG5d4=,tag:P9vZNof+JeS4l/+ogzc1fA==,type:comment]
+DOMAIN_0: ENC[AES256_GCM,data:/KjSLmRg3S0D4NW0,iv:wCoXgqywF3YUrIPU5ONNS4HxB0ABCRUPx5sWHmWhkqw=,tag:y7g9iScEu+PO+W721DF43A==,type:str]
+DOMAIN_0_EMAIL: ENC[AES256_GCM,data:UkCpeJRhmN5NCAvTHzPr8SM=,iv:5KGq3TftMvUVeXVZwDpqSfxTQD1o1TXEjAk706Za97I=,tag:ciYdBWPMM68vfMa2SLaiig==,type:str]
+DOMAIN_0_ZONE: ENC[AES256_GCM,data:Cw6F3C82G08i9OLB/QTdybhs4dyMIqcu8UKS2IwUzkw=,iv:fDRQrCV6H61EOBIpn/E6jCi7H7INEnuqHhfB24VGa00=,tag:MQdrKu4Pt0iSuO7qW5ASvQ==,type:str]
+DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:XYdrdlmv52LE/tvCTSi4pGHz81Nc4dXIW+XRzMunfs/RabUxwC1T+g==,iv:jTcIQl6KSs8xTmJ9OfKpjsWYWjQQtzeEKLKSlfBAqFk=,tag:Qib+essrs5+DEZpnON39gg==,type:str]
+#ENC[AES256_GCM,data:uOsg7IgOezsZSFOIb2sM+z/iYw93WSOL/lXwQiRgpkMrHH4uu6BFUTLmtWY1qzHWQQdBV4jxyXmMQ9A55yKGlA==,iv:3FJ3OsJHCnQ936Md6M9ZtLNHSp0INiS26GUmejbetQU=,tag:36d4UzwIXg1n+c7pxmIOJQ==,type:comment]
+#ENC[AES256_GCM,data:2Eppu6MifRxI/KT7HCeArv/uNEuZWnygJga2jkxWzbxX4eU3Mor0Opavg78E90Au8wKSR1sfcd4=,iv:abrRoRnna+nFEli+emHefrCmlTVO8Fa1yO0iXPgK308=,tag:UMrxjdp8J+TWVyYDFY5kuw==,type:comment]
+#ENC[AES256_GCM,data:afWJEL4tdG0P1CWaquo0KCmfsUuYu37T+g==,iv:RyrxyM0aokDxrBPZCeUAGu0snl1TtQZJ/1/L1emp3rU=,tag:5X2WkDHyyscVkQmulNgR7A==,type:comment]
+#ENC[AES256_GCM,data:5c3LZbyGnb3IRBhqO39twpahvznnA/qSVZ4iVmwOFPRkAfQyR2bDGd8QMxOzyrWFHG4wVyYB2uXCDcJbKRO0ksCgFzMfr4spdXJCYdM=,iv:fJAxNDSerNax/bJpNLhcioGfP7Vs8TVBVgLapd1rc7A=,tag:h3OyNSaQAYycbk2YHTMHiw==,type:comment]
+GITHUB_REPOSITORY: ENC[AES256_GCM,data:TDrvmxo2WXQnECP4/KGqql9w8YAxaMm3yHTpWvXKXWmMxEnFh4y+Qz/8VG7qPrrp,iv:JMVRLNwFPpEolty6pW11ri6unuauzhtmuSmzGnc7T/M=,tag:ULaKkpIORPuNySk1TxVhmQ==,type:str]
+#ENC[AES256_GCM,data:qWepptdqviCFISvh8cAxirGzs7Ei9qcyW+5i+tCf0ukEOQfVGGBmQNnP5PcaNe9+R8jalZkkF5ESfHznzwrw28YedDWE734=,iv:94SMQyexBjIDN3d10dMSvg0R2+v8/b0qXqm4ifzv/aY=,tag:/ofXTer+07AGvf4o/v8Drg==,type:comment]
+#ENC[AES256_GCM,data:pPUG3WD7Z1/tT2il38HIsLpQuZporYqB/1AKnooowmiw2Bo0sT7qRbt3RyV+7GoNp7+yWXtH,iv:pyvPDrS4DzWaEqeOJeJ6eoOuLWznHzGD4AjwztTV0VM=,tag:+/iZwtVqwAk3B57uR9VdKA==,type:comment]
+DOCKERHUB_USER: ENC[AES256_GCM,data:345udLpZEw==,iv:Bf47bmj+ghGrOwAHziFdlBEhK3lnA63pIno2jMQsS1g=,tag:EvLT9P1ryZTYTVFOyB2bcA==,type:str]
+DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:3W/CXypRRC5zv75waKtgqSvBJRY=,iv:H91AQs1yIiZkkvcIIdqjyGeXJDODHgVX/LjrOjlQ0rI=,tag:W/H0uy9jGHI9rbWLplNlcA==,type:str]
+NFS_SERVER: ENC[AES256_GCM,data:rRlH3oJ0stxkRLU=,iv:4sgJJjCJtSnXdHLyzkIHpdy04JWZ9loPVx16k+L8VcQ=,tag:wl2KWzWZ6o3BequRJ1w0wA==,type:str]
+PLEX_IP: ENC[AES256_GCM,data:9Hwf17gThNgZJ2YwkPNv,iv:fFZhPLNx6mAmyEeUaMaiNi4/pvCpSi0I3IEFpzvIYzE=,tag:DvvccUhqbkiUG9iHxW7DxA==,type:str]
+BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:DXxzxUHOnQS8BOVrelJUTZB9wfxeDE3l/Q==,iv:vWesKxopGQ5x3D41cjIaJbQtZufaCDGykVuU81VVRS4=,tag:+CT8ZOn5B6z/Kf17zUv71w==,type:str]
+BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:FmHEsi7z4kClVSPSs3nEEd3NQM/0i6Wn,iv:qVUyBG4L99cjQ1ls2TgVwgktvt3cOz0ITvLZDd4s7Ko=,tag:kNhgKy/tdQKFNdHrOEZeaQ==,type:str]
+BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:VUDFTmGygWHU01AHQEhB0vxq,iv:cc/UQlrP+nRm35DQPxbVS5fEAS6PF6tRopLzRYqOUwg=,tag:vEgwMIUH3MF3MWWuogof+g==,type:str]
+#ENC[AES256_GCM,data:6HbKls+au0wwIbvJ3nQ=,iv:aiUwf6fWMF4PdjvYhduewJGv/RYg53rCH4x3k01/zHw=,tag:+Zh340fIF8/eoOa9xH9LNA==,type:comment]
+PODNET: ENC[AES256_GCM,data:U/c4uo9BROgGRBS46Q==,iv:cR9DIuRyR76LQ1TpFqxqvTM189qP7NRRH4MDpNllMco=,tag:ImO+IF5cXgAQgxowKGDjZw==,type:str]
+SVCNET: ENC[AES256_GCM,data:bzW2MtGso9rHaO26Qg==,iv:+Q3LEbLVba2GMuwLJJiVho3A9pfc5PaK+/aROxQEYeM=,tag:8q6enV63ojyxqYnWYDzE0w==,type:str]
 sops:
     shamir_threshold: 3
     kms: []
@@ -49,13 +49,13 @@ sops:
         - recipient: age1xerwm86t75dl2v0sqq5xvzag5q6deawx5en7rqy92886049htaxqagw7yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBXbHp0Sk90MU8xR1VrNTJI
-            SmE2SXRQMTU3NnUzOUY4dTA2dnBlZGdPQnp3Ckllb3NDOWR4Q2lFZVJiZmNUMVJq
-            Q0l3bWlOMFRzRTNIZGxsZ293RVJvSm8KLS0tIDBBYWROeWJhSDhkRytwc2hFSU81
-            T2xVZmZCblVUdWM4cCtjWUttbWJad0kKRytMc1ErnW5Lxqtj9M8lek5cSF+AHj9V
-            LSrfsgrzlO7OlMXnlrEbrXJlPRAB1pm8UnRAndsr1evXYO3eml6aYA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBZQ0gzV0xNQ3YxdVc5RU1t
+            YTNCRHY2RUo1Rnkwd0hkV2tpS3kzbmkrUVI0CmtRdU5ONHVaNlMxUDh5NWtqbWVM
+            UU5JQWlmU2hCWEh2bzRadlRhakZobUkKLS0tIE1ScVRzdGxvTkVERmE2Y3ZCcVVw
+            bnZVQ0xTUE10eHZERXJHbVEyYmZKQU0Kmr/GIxDSoEeowa+KzsCt3CtppW0B2yMU
+            m4c7Cmapzf55mGVmEYFPbaZ8smZt71NLFpd8QyL+0NX8HCyM82Fdjg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-09T15:06:13Z"
-    mac: ENC[AES256_GCM,data:RDACBYaF3IMMlEgAxd7qwVCxWDbwkAcDr3yZ3NAOrUKOuWTbk464rcsF12iODGDq3j+/V3T8uq49TGH2Nato6kxxZuVvZhcdZZSAb8U6UEYy0cxD/RhyVqQb1ZlRRogHOKxHnTw8z4M9zqiUbbdUemIRIHXpE4XcwHaQ6wx+/yA=,iv:ZhtYSWE0GR1zpxZh4PutRifSTx9k8TRgvaOhMyav9G4=,tag:zBnTwIVKmhzWbeGwoKzNdA==,type:str]
+    lastmodified: "2025-01-09T15:07:55Z"
+    mac: ENC[AES256_GCM,data:SHoNoophE5Fzl7EJEhCZm3MMZcSgwu3u2YyNNgG9Ycq2RM6hrSfxSoJkFnxsY4VEvrWAaVoq+LlRKsnj5qQRnJoeZ7VHe5+0TZ980kIrV3ljki0TjJVhzw/OtOMGpe/Kg5bYlWCbisMlCId5ACJcXXWIp9HnQEBmYKmHRtsD26w=,iv:VjcRGCreTtLr8Tir/J5ChRnWYM+zrOh3q21UUcb3QmM=,tag:qBZFnibfDpNSKK8UnfZVKw==,type:str]
     pgp: []
     version: 3.9.1
